chore: Update color of name and title in Home component

--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,7 @@ h1 {
 }
 /* styles.css */
 .nameColor {
-  color:"#D3C389"; /* Change 'blue' to your desired color for the name */
+  color:"#FA79E90"; /* Change 'blue' to your desired color for the name */
 }
 
 .descriptionColor {
